--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
 * {
     -webkit-tap-highlight-color: transparent;
 }
-
+:root {
+    /*========== Colors ==========*/
+    --hue-color: 240;
+  
+    --first-color: hsl(var(--hue-color), 53%, 49%);
+    --title-color: hsl(var(--hue-color), 53%, 15%);
+    --text-color: hsl(var(--hue-color), 12%, 35%);
+    --text-color-light: hsl(var(--hue-color), 12%, 65%);
+    --white-color: #fff;
+    --body-color: hsl(var(--hue-color), 24%, 94%);
+  
+    /*========== Font and typography ==========*/
+    --biggest-font-size: 3rem;
+    --small-font-size: 0.813rem;
+    --smaller-font-size: 0.75rem;
+    --tiny-font-size: 0.625rem;
+  
+    /*========== z index ==========*/
+    --z-normal: 1;
+    --z-tooltip: 10;
+  }
 #root {
     min-height: 100vh;
-    background: #d9e9e3;
+    background: #c4e1c7;
 }
